--- a/precamp/class/01-html/02-signup.html
+++ b/precamp/class/01-html/02-signup.html
@@ -2,27 +2,47 @@
 <html lang="kr">
   <head>
     <title>Document</title>
+    <link rel="stylesheet" href="./02-signup.css" />
   </head>
   <body>
-    <h2>회원가입</h2>
-    <input type="text" placeholder="이메일을 입력해주세요" /><br /><br />
-    <input type="text" placeholder="이름을 입력해주세요" /><br /><br />
-    <input type="text" placeholder="비밀번호을 입력해주세요" /><br /><br />
-    <input type="text" placeholder="비밀번호을 입력해주세요" /><br /><br />
+    <div class="container">
+      <h2 class="title">
+        회원가입을 위해<br />
+        정보를 입력해주세요
+      </h2>
+      <div class="input__field">
+        <label for="email">* 이메일</label>
+        <input type="text" name="email" id="email" />
+      </div>
+      <div class="input__field">
+        <label for="name">* 이름</label>
+        <input type="text" name="name" id="name" />
+      </div>
+      <div class="input__field">
+        <label for="pwd">* 비밀번호</label>
+        <input type="password" name="pwd" id="pwd" />
+      </div>
+      <div class="input__field">
+        <label for="pwdCheck">* 비밀번호확인</label>
+        <input type="password" name="pwdCheck" id="pwdCheck" />
+      </div>
 
-    <select>
-      <option disabled="true" selected="true">지역을 입력하세요</option>
-      <option>서울</option>
-      <option>경기</option>
-      <option>인천</option>
-    </select>
+      <div class="radio__container">
+        <div class="radio__gender">
+          <input type="radio" name="gender" />여성
+        </div>
+        <div class="radio__gender">
+          <input type="radio" name="gender" />남성
+        </div>
+      </div>
 
-    <br /><br />
-    <input type="radio" name="gender" />여성
-    <input type="radio" name="gender" />남성 <input type="checkbox" />이용약관에
-    동의합니다 <br /><br />
-    <hr />
+      <div class="check_box">
+        <input type="checkbox" />이용약관 개인정보 수집 및 이용, 마케팅 활용
+        선택에 모두 동의합니다.
+      </div>
+      <hr />
 
-    <button>가입하기</button>
+      <button>가입하기</button>
+    </div>
   </body>
 </html>
