--- a/precamp/cyworld/index.html
+++ b/precamp/cyworld/index.html
@@ -2,7 +2,7 @@
 <html lang="kr">
   <head>
     <title>싸이월드</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <script
       src="https://kit.fontawesome.com/ce413c49ee.js"
       crossorigin="anonymous"
@@ -61,7 +61,15 @@
               </div>
             </div>
           </div>
-          <div class="wrapper__right">asds</div>
+          <div class="wrapper__right">
+            <div class="wrapper__right__header">
+              <div class="right__header__left">사이좋은 사람들, 싸이월드</div>
+              <div class="right__header__right">사생활보호설정></div>
+            </div>
+            <div class="wrapper__right__body">
+              <iframe src="./home.html" frameborder="0"></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </div>
