--- a/precamp/cyworld/game.html
+++ b/precamp/cyworld/game.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style/game.css" />
+    <script src="./js/game.js"></script>
   </head>
   <body>
-    <h1>해위</h1>
+    <div class="wrapper">
+      <div class="wrapper__header">
+        <div class="content__title">
+          <div class="title">GAME</div>
+          <div class="subtitle">TODAY CHOICE</div>
+        </div>
+        <div class="divide"></div>
+      </div>
+      <div class="wrapper__body">
+        <div class="game__container">
+          <img src="./image/game1.png" alt="기차" />
+          <h3>끝말잇기</h3>
+          <div class="problem__board">
+            제시어: <span class="problem" id="word">뉴비즈 코드</span>
+          </div>
+          <div class="input__menu">
+            <input
+              type="text"
+              name="answer"
+              id="answer"
+              placeholder="정답을 입력하세요"
+            />
+            <button id="submit">검색</button>
+          </div>
+          <div class="result" id="result">결과</div>
+        </div>
+        <div class="game__container">
+          <img src="./image//game2.png" alt="로또" />
+          <h3>로또</h3>
+          <div class="problem__board">버튼을 누르세요</div>
+          <div class="lotto__result">
+            <div class="num">3</div>
+            <div class="num">5</div>
+            <div class="num">10</div>
+            <div class="num">24</div>
+            <div class="num">30</div>
+            <div class="num">34</div>
+          </div>
+          <button class="lotto_button">Button</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
