--- a/precamp/cyworld/index.html
+++ b/precamp/cyworld/index.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/ce413c49ee.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/index.js" defer></script>
   </head>
   <body>
     <div class="background">
@@ -61,14 +62,22 @@
               </div>
             </div>
           </div>
+
           <div class="wrapper__right">
             <div class="wrapper__right__header">
               <div class="right__header__left">사이좋은 사람들, 싸이월드</div>
               <div class="right__header__right">사생활보호설정></div>
             </div>
+
             <div class="wrapper__right__body">
-              <iframe src="./home.html" frameborder="0"></iframe>
+              <iframe src="./home.html" frameborder="0" id="frame"></iframe>
             </div>
+          </div>
+
+          <div class="navigation">
+            <div class="navigation__item" id="navHome">홈</div>
+            <div class="navigation__item" id="navJukeBox">쥬크박스</div>
+            <div class="navigation__item" id="navGame">게임</div>
           </div>
         </div>
       </div>
